--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!--Background video-->
         <div id="Home">
             <video autoplay muted loop id="Typing_Video">
-                <source src="./Images/typing_video.mp4" type="video/mp4"> <!--revisit this to make sure it doesnt take up the whole screen after css is added-->
+                <source src="./images/typing_video.mp4" type="video/mp4"> <!--revisit this to make sure it doesnt take up the whole screen after css is added-->
                 <!--this displays a message if the video fails to run-->
                 Your browser does not support this HTML5 video.
             </video>
@@ -52,7 +52,7 @@
         <div class="Row" id="About">
             <!--left column-->
             <div class="Column_2">
-                <img src="./Images/about.jpg" alt="Computer setup with code on various monitors">
+                <img src="./images/about.jpg" alt="Computer setup with code on various monitors">
             </div>
             <!--right column-->
             <div class="Column_1">
@@ -88,7 +88,7 @@
         <div class="Row" id="Contact">
             <!--contact, image, left column-->
             <div class="Column_2 Column_tall">
-                <img src="./Images/contact.jpg" alt="Contact_Image">
+                <img src="./images/contact.jpg" alt="Contact_Image">
             </div>
             <!--Contact form, right column-->
             <div class="Column_1 Column_tall">
