--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!--Background video-->
         <div id="Home">
             <video autoplay muted loop id="Typing_Video">
-                <source src="./images/typing_video.mp4" type="video/mp4"> <!--revisit this to make sure it doesnt take up the whole screen after css is added-->
+                <source src="images/typing_video.mp4" type="video/mp4"> 
                 <!--this displays a message if the video fails to run-->
                 Your browser does not support this HTML5 video.
             </video>
@@ -104,7 +104,7 @@
         <div class="Row" id="About">
             <!--left column-->
             <div class="Column_2">
-                <img src="./images/about.jpg" alt="Computer setup with code on various monitors">
+                <img src="images/about.jpg" alt="Computer setup with code on various monitors">
             </div>
             <!--right column-->
             <div class="Column_1">
