Fixed images and Slideshow nav link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="Navbar">
             <a class="active" href="#Home">Home</a>
             <!--New slideshow added-->
-            <a href="Slideshow">Slideshow</a>
+            <a href="#Slideshow">Slideshow</a>
             <a href="#About">About</a>
             <a href="#GitHub">GitHub</a>
             <!--Onclick and ondblclick functions were added to open the contact form -->
@@ -61,12 +61,12 @@
                 </div>
                 <!--2/6-->
                 <div class="mySlides fade">
-                    <img class="Slideshow_Images" src="images/html_css_js.png" alt="HTML, CSS, and JS logos">
+                    <img class="Slideshow_Images" src="images/white-logos.png" alt="HTML, CSS, and JS logos">
                     <div class="text">I'm a full-stack software developer, <br> trained in:<br>HTML, CSS, JavaScript,</div>
                 </div>
                 <!--3/6-->
                 <div class="mySlides fade">
-                    <img class="Slideshow_Images" src="images/python.png" alt="python logo">
+                    <img class="Slideshow_Images" src="images/white-python.png" alt="python logo">
                     <div class="text">the popular programming language Python,</div>
                 </div>
                 <!--4/6-->
@@ -75,7 +75,7 @@
                 </div>
                 <!--5/6-->
                 <div class="mySlides fade">
-                    <img class="Slideshow_Images" src="images/sql.png" alt="SQL logo">
+                    <img class="Slideshow_Images" src="images/white-sql.png" alt="SQL logo">
                     <div class="text">back end development, databases and SQL.</div>
                 </div>
                 <!--6/6-->
